--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
     "react-query": "^3.34.17",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-use": "^17.3.2",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
