--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
     "react-query": "^3.34.17",
+    "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-use": "^17.3.2",
@@ -45,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-bootstrap": "^0.24.5"
   }
 }
